Avoid toot text bleeding out of the content div

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -11,6 +11,7 @@
   font-weight: 400;
   overflow: visible;
   padding-top: 5px;
+  overflow: hidden;
 
   &:focus {
     outline: 0;
